--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,7 @@ framework = arduino
 ; Add native platform for native unit testing
 [env:native]
 platform = native
+extra_scripts = post:extra_script.py
 lib_archive = false
 build_flags =
   -std=c++11
