--- a/library.properties
+++ b/library.properties
@@ -5,7 +5,7 @@ maintainer=Peter Halliday <pghalliday@gmail.com>
 sentence=Use BDD grammar with Unity assertions
 paragraph=Supports synchronous and asynchronous tests
 category=Other
-url=https://github.com/pghalliday/bdd-unity
+url=https://github.com/pghalliday/BddUnity
 architectures=*
 includes=BddUnity.hpp
 depends=Unity
