--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,8 @@ platform = espressif8266
 board = d1_mini
 framework = arduino
 test_build_project_src = true
+build_flags =
+  -D BDD_UNITY_SIZE_T_FORMAT=\"%%u\"
 
 [env:native]
 platform = native
