update location in metadata

--- a/library.properties
+++ b/library.properties
@@ -5,7 +5,7 @@ maintainer=Peter Halliday <pghalliday@gmail.com>
 sentence=Use BDD grammar with Unity assertions
 paragraph=Supports synchronous and asynchronous tests
 category=Other
-url=https://github.com/pghalliday/BurpUnity
+url=https://github.com/BurpTech/BurpUnity
 architectures=*
 includes=BurpUnity.hpp
 depends=Unity
